<resources>
    <string name="app_name">MiauAu</string>
    <string name="menu_home">Início</string>
    <string name="menu_pets">Pets</string>
    <string name="menu_chat">Chat</string>
    <string name="register_pet">Cadastrar Pet</string>
    <string name="pet_name">Nome do Pet</string>
    <string name="cat">Gato</string>
    <string name="dog">Cão</string>
    <string name="age">Idade</string>
    <string name="breed">Raça</string>
    <string name="size">Porte</string>
    <string name="male">Macho</string>
    <string name="female">Fêmea</string>
    <string name="vaccinated">Vacinado</string>
    <string name="castrated">Castrado</string>
    <string name="small">Pequeno</string>
    <string name="medium">Médio</string>
    <string name="large">Grande</string>
    <string name="pet_description">Descreva o seu pet aqui</string>
    <string name="save_pet_info">Salvar Informações do Pet</string>
    <string name="weeks">Semanas</string>
    <string name="months">Meses</string>
    <string name="years">Anos</string>
    <string name="pet_name_hint">Nome do Pet</string>
    <string name="breed_hint">Raça</string>
    <string name="age_hint">Idade</string>
    <string name="sex_hint">Sexo</string>
    <string name="pet_description_hint">Descrição geral do pet</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_password_confirmation">Confirme a Senha</string>
    <string name="action_sign_in">Entrar com Email</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="sign_in_google">Entrar com o Google</string>
    <string name="sign_up">Realizar Cadastro</string>
    <string name="login_welcome_message">Bem-vindo!\nFaça login para continuar</string>
    <string name="sign_up_message">Registre-se</string>
    <string name="already_have_user">Já tenho um usuário</string>
    <string name="skip_login">Fazer login depois...</string>
    <string name="not_registered_yet">Não tem uma conta?</string>
</resources>