<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        tools:context=".collections.PetRegisterFragment">

        <ImageView
            android:id="@+id/imagePet"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_pet_no_photo_foreground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/img_dog" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="80dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imagePet" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/petTypeChipGroup"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            app:singleSelection="true"
            app:checkedChip="@id/chipDog"
            app:selectionRequired="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipDog"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:checkable="true"
                android:text="@string/dog"
                android:textColor="@color/black"
                app:checkedIconVisible="false"
                app:chipBackgroundColor="@color/chip_background"
                app:chipCornerRadius="10dip"
                app:chipIcon="@drawable/dog"
                app:chipIconVisible="true"
                app:iconStartPadding="15dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipCat"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:checkable="true"
                android:text="@string/cat"
                android:textColor="@color/black"
                app:checkedIconVisible="false"
                app:chipBackgroundColor="@color/chip_background"
                app:chipCornerRadius="10dip"
                app:chipIcon="@drawable/cat"
                app:chipIconVisible="true"
                app:iconStartPadding="13dp" />
        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/petNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/pet_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/petTypeChipGroup">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lines="1"
                android:maxLength="30" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/petBreedEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/breed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/petNameEditText">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lines="1"
                android:maxLength="20" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/petAgeEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:hint="@string/age"
            app:layout_constraintEnd_toStartOf="@+id/petAgeChipGroup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/petBreedEditText">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/petAgeChipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            app:layout_constraintBottom_toBottomOf="@id/petAgeEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/petAgeEditText"
            app:singleSelection="true"
            app:checkedChip="@id/chipYears"
            app:selectionRequired="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipYears"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/years"
                android:textColor="@color/black"
                app:checkedIconVisible="false"
                app:chipBackgroundColor="@color/chip_background" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipMonths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/months"
                android:textColor="@color/black"
                app:checkedIconVisible="false"
                app:chipBackgroundColor="@color/chip_background" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipWeeks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/weeks"
                android:textColor="@color/black"
                app:checkedIconVisible="false"
                app:chipBackgroundColor="@color/chip_background" />

        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/petSizeChipGroup"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/petAgeChipGroup"
            app:singleSelection="true"
            app:checkedChip="@id/chipMedium"
            app:selectionRequired="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipSmall"
                android:layout_width="108dp"
                android:layout_height="match_parent"
                android:checkable="true"
                android:text="@string/small"
                android:textColor="@color/black"
                app:checkedIconVisible="false"
                app:chipBackgroundColor="@color/chip_background"
                app:chipCornerRadius="10dip"
                app:chipIcon="@drawable/ic_size_small_foreground"
                app:chipIconVisible="true"
                app:iconStartPadding="4dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipMedium"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:checkable="true"
                android:text="@string/medium"
                android:textColor="@color/black"
                app:checkedIconVisible="false"
                app:chipBackgroundColor="@color/chip_background"
                app:chipCornerRadius="10dip"
                app:chipIcon="@drawable/ic_size_medium_foreground"
                app:chipIconVisible="true"
                app:iconStartPadding="6dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipLarge"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:checkable="true"
                android:text="@string/large"
                android:textColor="@color/black"
                app:checkedIconVisible="false"
                app:chipBackgroundColor="@color/chip_background"
                app:chipCornerRadius="10dip"
                app:chipIcon="@drawable/ic_size_large_foreground"
                app:chipIconVisible="true"
                app:iconStartPadding="6dp" />
        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/petSexChipGroup"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/petSizeChipGroup"
            app:singleSelection="true"
            app:checkedChip="@id/chipMale"
            app:selectionRequired="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipMale"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:checkable="true"
                android:text="@string/male"
                android:textColor="@color/black"
                app:checkedIconVisible="false"
                app:chipBackgroundColor="@color/chip_background"
                app:chipCornerRadius="10dip"
                app:chipIcon="@drawable/male"
                app:chipIconVisible="true"
                app:iconStartPadding="7dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipFemale"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:checkable="true"
                android:text="@string/female"
                android:textColor="@color/black"
                app:checkedIconVisible="false"
                app:chipBackgroundColor="@color/chip_background"
                app:chipCornerRadius="10dip"
                app:chipIcon="@drawable/female"
                app:chipIconVisible="true"
                app:iconStartPadding="6dp" />
        </com.google.android.material.chip.ChipGroup>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/petOthersLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/petSexChipGroup">

            <CheckBox
                android:id="@+id/petVaccinatedCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:buttonTint="@color/yellow"
                android:text="@string/vaccinated" />

            <CheckBox
                android:id="@+id/petCastratedCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/yellow"
                android:text="@string/castrated" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/petDescriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/pet_description"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/petOthersLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:id="@+id/SaveButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/green"
            android:text="@string/save_pet_info"
            android:textAllCaps="false"
            android:textColor="@color/light"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/petDescriptionEditText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>